--- a/thecode Extension/Resources/popup.css
+++ b/thecode Extension/Resources/popup.css
@@ -3,11 +3,27 @@
 }
 
 body {
-    width: 100px;
-    padding: 10px;
-
     font-family: system-ui;
-    text-align: center;
+    padding: 0 12px;
+    width: 320px;
+}
+
+h1 {
+    display: block;
+    font-size: 32px;
+    margin-bottom: 0;
+}
+
+h2 {
+    display: block;
+    font-size: 14px;
+    font-style: italic;
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+
+#error {
+    color: red;
 }
 
 @media (prefers-color-scheme: dark) {
